<resources>
    <string name="app_name">Shop</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list">List is empty</string>
    <string name="buy">BUY</string>
    <string name="dollar">$</string>
    <string name="sum">SUM:</string>
    <string name="find_coffee_tv">Find the best coffee for you</string>
    <string name="find_your_coffee">Find your coffee…</string>
</resources>