<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_product"/>

    <FrameLayout
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:layout_gravity="start|center"
            android:textColor="@color/white"
            android:text="@string/sum"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:layout_gravity="start|center"
            android:textColor="@color/custom_orange"
            android:text="@string/dollar"
            android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/sumSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"/>

            <Button
                android:id="@+id/buyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:text="@string/buy"
                android:layout_gravity="end|center"
                android:backgroundTint="@color/custom_orange"/>
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
